--- a/templates/base.html
+++ b/templates/base.html
@@ -74,17 +74,18 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="/ppr/publication">Publication</a>
+                        <a class="nav-link"  href="/ppr/publication">Academic Activity</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="/ppr/research">Project & Research</a>
+                        <a class="nav-link"  href="/ppr/research">Research Area</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="/notice">Notice</a>
+                        <a class="nav-link"  href="/notice">Notices</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/gallery">Gallery</a>
                     </li>
+
                     <li class="nav-item">
                         {% if user.is_authenticated %}
                         <a class="nav-link" href="{% url 'main:logout' %}?next={{ request.path }}" style="color:white;"> Logout</a>
@@ -125,9 +126,8 @@
                     {% endif %}
                 {% endif %}
                 <br>
-                <a>Address: (S4-1)-303(3F), Chungdae-ro 1, Seowon-gu, Cheongju, Chungbuk, 28644, Republic of Korea</a><br>
-                <a>주소: (28644) 충북 청주시 서원구 충대로 1, 충북대학교 전자정보대학 소프트웨어학과 S4-1동(전자정보 3관) 303호</a><br>
-                <a>Tel) Fax)</a><br>
+                <a>Address: (S4-1)-308(3F), Chungdae-ro 1, Seowon-gu, Cheongju, Chungbuk, 28644, Republic of Korea</a><br>
+                <a>주소: (28644) 충북 청주시 서원구 충대로 1, 충북대학교 전자정보대학 소프트웨어학과 S4-1동(전자정보 3관) 308호</a><br>
                 <a>Developer e-mail: takurway@gmail.com</a>
             </div>
             <div class="col-sm-2">
