--- a/templates/gallery/gallery_add.html
+++ b/templates/gallery/gallery_add.html
@@ -5,13 +5,6 @@
     <meta charset="UTF-8">
     <title>SELab - Gallery Write</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-    <!-- include summernote css/js -->
-    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-    <script type="text/javascript" src="/static/summernote/lang/summernote-ko-KR.js"></script>
 
     <!-- margin 간격이 심해 margin-bottom을 0으로 -->
     <style>
@@ -21,6 +14,10 @@
         #id_img{
             height: 40px;
             width: 220px;
+        }
+
+        #id_title{
+            height: 80px;
         }
     </style>
 </head>
@@ -57,6 +54,8 @@
             <button type="submit" id="write" class="btn btn-md btn-secondary">save</button>
             {% endif %}
         </div>
+
+
 
     </form>
 </body>
