--- a/templates/notice/notice_list.html
+++ b/templates/notice/notice_list.html
@@ -35,7 +35,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>   <!-- 1 -->
     <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>               <!-- 2 -->
 
-    <div class="panel container-fluid text-center"><a class="panel-name"><b>Notice</b></a></div>
+    <div class="panel container-fluid text-center"><a class="panel-name"><b>Notices</b></a></div>
 
     <div class="container-fluid">
         <div class="row">
