tabs deleted and modified

--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -95,8 +95,8 @@
                                     <i>/* Our Newest Publication */</i><br><br>
                                     {% if publication %}
                                         TITLE: {{ publication.title }}<br>
-                                        PUBLISHER: {{ publication.publisher }}<br>
-                                        PUBLISHED DATE: {{ publication.published_date }}
+                                        PUBLISHER: {{ publication.journals }}<br>
+                                        PUBLISHED DATE: {{ publication.issued_date }}
                                     {% endif %}
                                 </a>
                                 <!--.row-->
