--- a/templates/base.html
+++ b/templates/base.html
@@ -86,13 +86,13 @@
                         <a class="nav-link" href="/gallery">Gallery</a>
                     </li>
 
-                    <li class="nav-item">
+                    <!-- li class="nav-item">
                         {% if user.is_authenticated %}
                         <a class="nav-link" href="{% url 'main:logout' %}?next={{ request.path }}" style="color:white;"> Logout</a>
                         {% else %}
                         <a class="nav-link" href="{% url 'main:login' %}?next={{ request.path }}" style="color:white;"> Login</a>
                         {% endif %}
-                    </li>
+                    </li -->
                 </ul>
             </div>
         </nav>
