--- a/templates/people/members.html
+++ b/templates/people/members.html
@@ -15,21 +15,93 @@
 
 <body>
 {% block contents %}
-    <!-- Phd Area -->
+    <!-- Post Doctor Area -->
 
     <div class="panel container-fluid text-center">
-        <a class="panel-name"><b>PHD Course</b></a><br>
+        <a class="panel-name"><b>Post Doctor</b></a><br>
     </div>
 
     <!-- Add button -->
     <div class="modifyButton" style="text-align: right;">
         {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' %}
-            <a href="/people/add_member" class="btn btn-primary" onclick="">Add</a>
+            <a href="/people/add_member/1" class="btn btn-primary" onclick="">Add</a>
+        {% endif %}
+    </div>
+
+    {% if postDoctor_all %}
+    {% for postDoctor in postDoctor_all %}
+    <div style="background-color: white; padding-top:20px;" class="member container-fluid">
+        <div class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-2">
+                {% if postDoctor.img_upload %}
+                <img src="{{ postDoctor.img_upload.url }}" width="170px;" style="border-radius: 7px;">
+                {% endif %}
+            </div>
+            <div class="col-lg-8">
+                <a style=" font-size: 25px;"><b>{{ postDoctor.name }}</b></a><br>
+                <a style="font-size: 15px;">
+                    E-mail: {{ postDoctor.email }}<br><br>
+                    {{ postDoctor.content | safe }}<br><br>
+                </a>
+
+                <!-- 수정, 삭제 버튼 -->
+                <div class="modifyButton" style="text-align: right;">
+                    {% if request.user.level == '0' or request.user.level == '1' %}
+                        <a href="alumni/{{ postDoctor.id }}/" class="btn btn-info">alumni</a>
+                    {% endif %}
+                    {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' and request.user.username == postDoctor.name or request.user.level == '2' and request.user.userid == postDoctor.name %}
+                        <a href="modify/{{ postDoctor.id }}/" class="btn btn-success">Modify</a>
+                        <button type="button" class="btn btn-danger" data-toggle="modal" data-target=".delete_modal">delete</button>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 삭제 버튼 클릭시, 팝업되는 modal창 -->
+    <div id="delete_modal1" class="delete_modal modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Deletion Warning</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure to delete it?</p>
+                </div>
+                <div class="modal-footer">
+                    <button onclick="delete_modal1()" type="button" class="btn btn-dark">Delete</button>
+                    <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script type="text/javascript">
+        function delete_modal1() {
+            location.replace('delete/{{ postDoctor.id }}/');
+        }
+    </script>
+    {% endfor %}
+    {% endif %}
+
+    <!-- Phd Area -->
+
+    <div class="panel container-fluid text-center">
+        <a class="panel-name"><b>PhD Course</b></a><br>
+    </div>
+
+    <!-- Add button -->
+    <div class="modifyButton" style="text-align: right;">
+        {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' %}
+            <a href="/people/add_member/2" class="btn btn-primary" onclick="">Add</a>
         {% endif %}
     </div>
 
     {% if phd_all %}
-    {% for phd in master_all %}
+    {% for phd in phd_all %}
     <div style="background-color: white; padding-top:20px;" class="member container-fluid">
         <div class="row">
             <div class="col-lg-2"></div>
@@ -59,7 +131,7 @@
         </div>
     </div>
     <!-- 삭제 버튼 클릭시, 팝업되는 modal창 -->
-    <div id="" class="delete_modal modal fade" tabindex="-1" role="dialog">
+    <div id="delete_modal2" class="delete_modal modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -72,7 +144,7 @@
                     <p>Are you sure to delete it?</p>
                 </div>
                 <div class="modal-footer">
-                    <button onclick="delete_modal()" type="button" class="btn btn-dark">Delete</button>
+                    <button onclick="delete_modal2()" type="button" class="btn btn-dark">Delete</button>
                     <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
                 </div>
             </div>
@@ -80,7 +152,7 @@
     </div>
 
     <script type="text/javascript">
-        function delete_modal() {
+        function delete_modal2() {
             location.replace('delete/{{ phd.id }}/');
         }
     </script>
@@ -97,7 +169,7 @@
     <!-- Add button -->
     <div class="modifyButton" style="text-align: right;">
         {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' %}
-            <a href="/people/add_member" class="btn btn-primary" onclick="">Add</a>
+            <a href="/people/add_member/3" class="btn btn-primary" onclick="">Add</a>
         {% endif %}
     </div>
 
@@ -160,17 +232,16 @@
     {% endfor %}
     {% endif %}
 
-
+    <!-- Ungraduate Area -->
 
     <div class="panel container-fluid text-center">
         <a class="panel-name"><b>Undergraduate Course</b></a><br>
     </div>
 
-    <!-- Ungraduate Area -->
-    <!-- 글쓰기 버튼 -->
+    <!-- Add button -->
     <div class="modifyButton" style="text-align: right;">
-        {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '3' %}
-            <a href="/people/add_other_staff" class="btn btn-primary">Add</a>
+        {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' %}
+            <a href="/people/add_member/4" class="btn btn-primary" onclick="">Add</a>
         {% endif %}
     </div>
 
@@ -193,16 +264,19 @@
 
                 <!-- 수정, 삭제 버튼 -->
                 <div class="modifyButton" style="text-align: right;">
-                    {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '3' and request.user.userid == undergraduate.name or request.user.level == '3' and request.user.username == undergraduate.name %}
-                        <a href="modify/staff/{{ undergraduate.id }}/" class="btn btn-success">Modify</a>
-                        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete_modal2">delete</button>
+                    {% if request.user.level == '0' or request.user.level == '1' %}
+                        <a href="alumni/{{ undergraduate.id }}/" class="btn btn-info">alumni</a>
+                    {% endif %}
+                    {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '3' and request.user.username == undergraduate.name or request.user.level == '3' and request.user.userid == undergraduate.name %}
+                        <a href="modify/{{ undergraduate.id }}/" class="btn btn-success">Modify</a>
+                        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete_modal">delete</button>
                     {% endif %}
                 </div>
             </div>
         </div>
     </div>
     <!-- 삭제 버튼 클릭시, 팝업되는 modal창 -->
-    <div id="delete_modal2" class="modal fade" tabindex="-1" role="dialog">
+    <div id="delete_modal4" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -215,7 +289,7 @@
                     <p>Are you sure to delete it?</p>
                 </div>
                 <div class="modal-footer">
-                    <button onclick="delete_modal2()" type="button" class="btn btn-dark">Delete</button>
+                    <button onclick="delete_modal4()" type="button" class="btn btn-dark">Delete</button>
                     <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
                 </div>
             </div>
@@ -223,12 +297,14 @@
     </div>
 
     <script type="text/javascript">
-        function delete_modal2() {
-            location.replace('delete/staff/{{ undergraduate.id }}/');
+        function delete_modal4() {
+            location.replace('delete/{{ undergraduate.id }}/');
         }
     </script>
     {% endfor %}
     {% endif %}
+
+    <!-- Alumni Area -->
 
     <div class="panel container-fluid text-center">
         <a class="panel-name"><b>Alumni</b></a><br>
@@ -237,7 +313,7 @@
     <!-- Add button -->
     <div class="modifyButton" style="text-align: right;">
         {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' %}
-            <a href="/people/add_member" class="btn btn-primary" onclick="">Add</a>
+            <a href="/people/add_member/0" class="btn btn-primary" onclick="">Add</a>
         {% endif %}
     </div>
 
@@ -260,9 +336,6 @@
 
                 <!-- 수정, 삭제 버튼 -->
                 <div class="modifyButton" style="text-align: right;">
-                    {% if request.user.level == '0' or request.user.level == '1' %}
-                        <a href="alumni/{{ alumni.id }}/" class="btn btn-info">alumni</a>
-                    {% endif %}
                     {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' and request.user.username == alumni.name or request.user.level == '2' and request.user.userid == alumni.name %}
                         <a href="modify/{{ alumni.id }}/" class="btn btn-success">Modify</a>
                         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete_modal3">delete</button>
