--- a/templates/notice/notice_detail.html
+++ b/templates/notice/notice_detail.html
@@ -6,7 +6,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Crown - {{ notice.title }}</title>
+    <title>CBNU SELab - {{ notice.title }}</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <style>
         button {
