--- a/templates/notice/notice_list.html
+++ b/templates/notice/notice_list.html
@@ -7,7 +7,7 @@
 <head>
 {% block header %}
     <meta charset="UTF-8">
-    <title>SELab - Notice</title>
+    <title>CBNU SELab - Notice</title>
     <link rel = "stylesheet" href="{% static 'css/notice.css' %}?ver=1.1">
     <link rel = "stylesheet" href="{% static 'css/people.css' %}?ver=1.2">
     <style>
